feat: :dizzy: add image-blend-canvas canvas draw animation

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ a {
   margin-left: 2em;
 }
 .scroll-section {
+  position: relative;
   padding-top: 50vh;
 }
 #scroll-section-0 h1 {
@@ -165,6 +166,11 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
+}
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 1024px) {
