--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,10 @@ a {
   top: 50%;
   left: 50%;
 }
+.image-blend-canvas.sticky {
+  position: fixed;
+  top: 0;
+}
 #scroll-section-3 {
   display: flex;
   flex-direction: column;
