--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,8 @@ a {
   color: rgb(29, 29, 31);
 }
 .canvas-caption {
+  max-width: 1000px;
+  margin: -24rem auto 0;
   padding: 0 1rem;
   font-size: 1.2rem;
   color: #888;
@@ -210,6 +212,8 @@ a {
     font-size: 4vw;
   }
   .canvas-caption {
+    margin-top: -8rem;
+    padding: 0;
     font-size: 2rem;
   }
 }
