--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,7 @@ a {
     font-size: 4vw;
   }
   .description {
+    padding: 0;
     font-size: 2rem;
   }
   .description strong {
@@ -209,6 +210,8 @@ a {
     left: 55%;
   }
   .mid-message {
+    width: 1000px;
+    padding: 0;
     font-size: 4vw;
   }
   .canvas-caption {
