feat: :dizzy: set menu blur when scroll animation

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,12 @@ a {
   padding: 0 1rem;
   border-bottom: 1px solid #ddd;
 }
+.local-nav-sticky .local-nav {
+  position: fixed;
+  top: 0;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: saturate(180%) blur(15px);
+}
 
 .global-nav-links,
 .local-nav-links {
