feat: :sparkles: add svg loading animation

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@ a {
   color: rgb(29, 29, 31);
   text-decoration: none;
 }
+body.before-loading {
+  overflow: hidden;
+}
 
 .global-nav {
   position: absolute;
@@ -183,6 +186,53 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  background: white;
+  opacity: 0;
+  transition: 0.5s;
+}
+.before-loading .loading {
+  opacity: 1;
+}
+@keyframes loading-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-circle {
+  width: 54px;
+  height: 54px;
+  animation: loading-spin 3s infinite;
+}
+@keyframes loading-circle-ani {
+  0% {
+    stroke-dashoffset: 157;
+  }
+  75% {
+    stroke-dashoffset: -147;
+  }
+  100% {
+    stroke-dashoffset: -157;
+  }
+}
+.loading-circle circle {
+  stroke: black;
+  stroke-width: 4;
+  /* getTotalLength()로 stroke의 길이를 얻어올 수 있음 */
+  stroke-dasharray: 157;
+  stroke-dashoffset: 0;
+  fill: none;
+  animation: loading-circle-ani 1s infinite;
 }
 
 @media (min-width: 1024px) {
