fix: :bug: 새로고침 시 스크롤 오차 버그 수정

--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,9 @@ body.before-loading {
   opacity: 0;
   transition: 0.5s;
 }
+.before-loading .container {
+  display: none;
+}
 .before-loading .loading {
   opacity: 1;
 }
